parse/tests/snapshots/parse_test__inputs@build_with_no_outputs.ninja.snap
---
source: parse/tests/parse_test.rs
expression: e
input_file: parse/tests/inputs/build_with_no_outputs.ninja
---
/home/nsmnikhil/ninja-rs/parse/tests/inputs/build_with_no_outputs.ninja:1:6: Expected at least one output for build
build: phony
     ^ near here
