parse/tests/snapshots/parse_test__inputs@comments_in_odd_places_1.ninja.snap
---
source: parse/tests/parse_test.rs
expression: e
input_file: parse/tests/parse_inputs/comments_in_odd_places_1.ninja
---
parse_inputs/comments_in_odd_places_1.ninja:4:10: Expected =, got newline
      bar
         ^ near here
