parse/tests/snapshots/parse_test__inputs@eof_at_assign.ninja.snap
---
source: parse/tests/parse_test.rs
expression: e
input_file: parse/tests/inputs/eof_at_assign.ninja
---
/home/nsmnikhil/ninja-rs/parse/tests/inputs/eof_at_assign.ninja:2:12: Expected value, got EOF
  command =
           ^ near here
