parse/tests/snapshots/parse_test__inputs@escape_lex_1.ninja.snap
---
source: parse/tests/parse_test.rs
expression: e
input_file: parse/tests/parse_inputs/escape_lex_1.ninja
---
parse_inputs/escape_lex_1.ninja:2:19: Illegal character
    command = bar$(goober
                  ^ near here
