parse/tests/snapshots/parse_test__inputs@escape_lex_2.ninja.snap
---
source: parse/tests/parse_test.rs
expression: e
input_file: parse/tests/parse_inputs/escape_lex_2.ninja
---
parse_inputs/escape_lex_2.ninja:3:18: Unexpected EOF
    command = bar$
                 ^ near here
