parse/tests/snapshots/parse_test__inputs@escape_lex_5.ninja.snap
---
source: parse/tests/parse_test.rs
expression: e
input_file: parse/tests/parse_inputs/escape_lex_5.ninja
---
parse_inputs/escape_lex_5.ninja:2:20: Expected identifier
    command = bar${}uh need some ident
                   ^ near here
