parse/tests/snapshots/parse_test__inputs@escape_lex_6.ninja.snap
---
source: parse/tests/parse_test.rs
expression: e
input_file: parse/tests/inputs/escape_lex_6.ninja
---
/home/nsmnikhil/ninja-rs/parse/tests/inputs/escape_lex_6.ninja:3:19: Unexpected EOF
    command = bar${
                  ^ near here
